@@ -1354,6 +1354,7 @@ FileWriteGIF (interp, filename, format, blockPtr)
 	return TCL_ERROR;
     }
     if (Tcl_SetChannelOption(interp, chan, "-translation", "binary") != TCL_OK) {
+	Tcl_Close(NULL, chan);
 	return TCL_ERROR;
     }
 
